added second and third blog

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="blog.css">
     <title>My Simple Website</title>
 </head>
 <body>
     <div>
         <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas animi nemo unde expedita ut itaque saepe suscipit dolorem dicta, mollitia quam hic similique aliquid nihil ullam distinctio at tenetur, porro laudantium, temporibus asperiores assumenda? Perspiciatis consequatur quo laboriosam nulla repellendus sint, debitis animi officiis beatae quam earum illum, neque illo?
+        </p>
+    </div>   
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas animi nemo unde expedita ut itaque saepe suscipit dolorem dicta, mollitia quam hic similique aliquid nihil ullam distinctio at tenetur, porro laudantium, temporibus asperiores assumenda? Perspiciatis consequatur quo laboriosam nulla repellendus sint, debitis animi officiis beatae quam earum illum, neque illo?
+        </p>
+    </div>   
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas animi nemo unde expedita ut itaque saepe suscipit dolorem dicta, mollitia quam hic similique aliquid nihil ullam distinctio at tenetur, porro laudantium, temporibus asperiores assumenda? Perspiciatis consequatur quo laboriosam nulla repellendus sint, debitis animi officiis beatae quam earum illum, neque illo?
         </p>
     </div>   
