--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas animi nemo unde expedita ut itaque saepe suscipit dolorem dicta, mollitia quam hic similique aliquid nihil ullam distinctio at tenetur, porro laudantium, temporibus asperiores assumenda? Perspiciatis consequatur quo laboriosam nulla repellendus sint, debitis animi officiis beatae quam earum illum, neque illo?
         </p>
-    </div>   
+    </div>  
+    <div>
+        <h3>You have to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m" "</li>
+            <li>git push</li>
+        </ul>
+    </div> 
+    <div>
+        <h3>image</h3>
+        <img src="home-icon.jpg" alt="">
+    </div>
 </body>
 </html>
